Changes in commentary

--- a/Linear Regression/Linear Regression.ipynb
+++ b/Linear Regression/Linear Regression.ipynb
@@ -108,7 +108,7 @@
    "source": [
     ">In order to generalize the the above equation to multiple feature set X($x_1,x_2,x_3, ... $), we make use of vector notation. </br>\n",
     ">We append $x_0$(array of 1's) in the front of X, such that our hypothesis will be  $h_{\\theta} = \\theta_{0}.1 + \\theta_{1}x_{1} + \\theta_{2}x_{2} + .... $ </br>\n",
-    ">Above hypothesis equation will be $h_{\\theta} = \\theta . X^{T} $\n",
+    ">Above hypothesis equation will be $h_{\\theta} = X.\\theta^{T} $\n",
     "> Then our loss function can be written as, $L(\\theta) = \\frac{1}{2N} \\sum_{n = 1 }^{N}(X.\\theta^{T} - y)^2$</br>\n",
     ">Where $\\theta = [\\theta_{0}, \\theta{1}, \\theta{2}, ... ]$ and $X = [x_{0}, x{1}, x{2}, ... ]$ </br>\n",
     ">Then Gradient Descent update rule will be, </br>\n",
@@ -262,7 +262,7 @@
    "id": "1c71a00e",
    "metadata": {},
    "source": [
-    "### MINI-batch Gradient Descent"
+    "### MINI-Batch Gradient Descent"
    ]
   },
   {
@@ -382,6 +382,15 @@
     "sns.scatterplot(x=X_train,y = y_train)\n",
     "plt.xlabel('x',fontsize = 15)\n",
     "plt.ylabel('y',fontsize = 15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d195940",
+   "metadata": {},
+   "source": [
+    "> Below class representslinear regression class. </br>\n",
+    "> Among Batch GD, Stocastic GD and Mini-Batch GD, any one optimizer can be used to reduce loss function."
    ]
   },
   {
@@ -653,6 +662,25 @@
     "model.plot_model(X_train,X_test,y_train,y_pred)\n",
     "model.plot_error()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e89f3f64",
+   "metadata": {},
+   "source": [
+    "**Batch GD VS Stocastic GD VS MINI-Batch GD**\n",
+    "> - Loss function reduced smoothly using **Batch-GD**, but the cost of iterating 20 times to get acceptable loss by computing whole dataset in gradient calculation is costly. It may not seems to be now, but what if length of the data set is million? </br>\n",
+    "> - Whereas in **Stochastic GD**, we are taking random sample for gradient calculation. Thus, we are calulating the approximation of gradient opposed to real gradient in Batch GD. Thus error graph has noise, but over large epochs it reduces significantlly. Even though it take large epoch, but cost of each epoch is very less. So incase of large data size, stochastic GD is a better option than Batch GD.\n",
+    "> - One option to reduce the noise in loss graph is to make use of both method above, rather than processing whole dataset we can take a batch of random sample from data to calculate gradient. It is more accurate estimatation of gradient. Thus low noise along with less epochs it takes for converging in case of **Mini-Batch GD**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fd6001b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
